--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -10,7 +10,12 @@
                 <li class="nav-divider"></li>
                 <li > <img class="header-right-bell" src="./../assets/icon/bell-icon.png" width="25px"></li>
                 <li class="nav-divider"></li>
-                <li class="admin-name">Abbas haider</li>
+                <li class="admin-name">Admin
+                 <a> <i (click)="logout()" class="fas fa-angle-down" style="font-size:16px; margin-left:10px">
+                     <p>LogOut</p>
+                  </i></a>
+                </li>
+                <li></li>
             </ul>
         </div>
       </nav>
