--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="login-logo"><img src="./../../assets/icon/login-logo.png" alt="login-image"> </div>
         <div class="sign-in" >
             <h2>SIGN IN</h2>
-            <p>Hello There! Sign in to start managing your  Maids n Cars</p>
+            <p>Hello There! Sign in to start managing your</p><p>  Maids n Cars</p>
         </div>
         <div class="login-form">
           <form class="form">
