--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -30,33 +30,42 @@
 }
 .sign-in h2{
 
-  font-size: 28px;
-  font-weight: 300;
+  font-size: 25px;
+  font-weight: 500;
   font-style: normal;
   font-stretch: normal;
   line-height: 1.66;
   letter-spacing: 0.6px;
   color: #263238;
+  padding-left: 31px;
+    margin-top: 17px;
 }
 .sign-in p{
   font-size: 16.5px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
-  line-height: 1.58;
+  line-height: 0.58;
   letter-spacing: 0.7px;
   text-align: center;
   color: rgba(38, 50, 56, 0.6);
+  margin-left: -193px
+
 }
 .login-form{
     width:100%;
     float:left;
+    margin-left: -105px;
+    margin-top: 10px;
 }
 .login-button{
   width: 397px;
   height: 54px;
-  border-radius: 5px;
+  border-radius: 10px;
+  border:none;
   background-image: linear-gradient(to top, #ff4c01, #ff6f33);
+  margin-left: -105px;
+  color:white;
 }
 
 
