--- a/src/app/admin/society/society.component.html
+++ b/src/app/admin/society/society.component.html
@@ -155,11 +155,9 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [length]="10"
-        [pageSize]="5"
-        [pageIndex]="pages"
-        
-        (page)="nextPage($event)" showFirstLastButtons style="width:96%;margin-left:11px"  ></mat-paginator>
+        <mat-paginator #paginator [length]="totalRecords"  [pageSize]="10" [pageSizeOptions]="[10]" [showFirstLastButtons]="true" style="width:96%;margin-left:11px"  ></mat-paginator>
+
+    
     </div>
     </div>
 
