--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,26 +7,36 @@
             <p>Hello There! Sign in to start managing your</p><p>  Maids n Cars</p>
         </div>
         <div class="login-form">
-          <form class="form">
+          <form (ngSubmit)="loginUser()" #loginForm="ngForm">
             <div class="form-group">
-              <mat-form-field>
-                <input matInput type="text" class="input-full-width" class="form-control" placeholder="Email Id" 
-                 [(ngModel)]="loginUserData.email" name="email">
+              <mat-form-field class="example-full-width">
+                <input matInput matInputType="email" class="input-full-width"  class="form-control" email placeholder="Email Id" 
+                 [(ngModel)]="loginUserData.email" #email="ngModel" name="email"  required>
+                 <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
+                  Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="email.hasError('required')">
+                  Email is <strong>required</strong>
+                </mat-error>
               </mat-form-field>
             </div>
             <div class="form-group">
-              <mat-form-field>
+              <mat-form-field  class="example-full-width">
                 <input matInput type="password" class="form-control" class="input-full-width" placeholder="Password" 
-                  [(ngModel)]="loginUserData.password" name="password">
+                  [(ngModel)]="loginUserData.password" name="password"  #password="ngModel" required>
+                  <mat-error *ngIf="password.hasError('required')">
+                    Password is <strong>required</strong>
+                  </mat-error>
               </mat-form-field>
             </div>
-                  
+            <div >
+              <button class="login-button" type="submit" [disabled]="loginForm.form.invalid">SIGN IN</button>
+          </div>    
           </form>
         </div>
-        <div >
-          <button (click)="loginUser()" class="login-button" type="submit">SIGN IN</button>
-        </div>
       </div>
+      
+      
   </div>
 </div>
 
