--- a/src/app/admin/sidemenu/sidemenu.component.html
+++ b/src/app/admin/sidemenu/sidemenu.component.html
@@ -12,10 +12,10 @@
         <a routerLink="/employee"><img src="./../../../../assets/icon/employee gray.png" class="nav-icons"  />
           <span class="nav-text">Employee</span></a>
       </div>
-      <!-- <div style="margin-bottom:12px">
+      <div style="margin-bottom:12px">
         <a routerLink="/practice"><img src="./../../../../assets/icon/employee gray.png" class="nav-icons"  />
           <span class="nav-text">Practice</span></a>
-      </div> -->
+      </div>
       <!-- <div>
         <a routerLink="/admin"><img src="./../../../../assets/icon/employee gray.png" class="nav-icons"  />
           <span class="nav-text">Admin</span></a>
