--- a/src/app/admin/society/society.component.html
+++ b/src/app/admin/society/society.component.html
@@ -131,14 +131,14 @@
 
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef>Actions </th>
-                <td mat-cell *matCellDef="let row">
+                <td mat-cell *matCellDef="let element">
                     <!-- <button  style="border-radius: 50%;width: 30px;height:30px;"><img src="./../../assets/icon/delete.png" width="30px" height="30px"></button>
        
             <button  ><img src="./../../assets/icon/edit.png" width="30px" height="30px"></button> -->
                     <!-- <button class="action-button"></button> -->
                     <button type="button" class="btn btn-danger btn-circle btn-lg btn-del"><i class="fa fa-trash-o"
                             aria-hidden="true"></i></button>
-                    <button type="button" class="btn btn-danger btn-circle btn-lg btn-edit"><i class="fa fa-pencil"
+                    <button type="button" class="btn btn-danger btn-circle btn-lg btn-edit" (click)="deleteSociety(element)"><i class="fa fa-pencil"
                             aria-hidden="true"></i></button>
                 </td>
 
