--- a/src/app/admin/practice/practice.component.html
+++ b/src/app/admin/practice/practice.component.html
@@ -1,5 +1,45 @@
-<p>
-  Your Text : <input type="text" [(ngModel)]="userText">
-</p>
-<br/><br/>
-<simple [simpleInput]="userText"></simple>
+<div class="container-fluid">
+  <h1>Angular Form</h1>
+  <form #userForm="ngForm" (ngSubmit)="onSubmit()" >
+
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control" name="userName" [(ngModel)]="userModel.name">
+    </div>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="email" class="form-control" name="email" [(ngModel)]="userModel.email">
+    </div>
+    <div class="form-group">
+      <label>Phone</label>
+      <input type="tel" class="form-control" name="phone" [(ngModel)]="userModel.phone" >
+    </div>
+    <div class="form-group">
+      <select class="custom-select" name="topic" ngModel>
+        <option selected >I am interested In</option>
+        <option *ngFor="let topic of topics" >{{topic}}</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <label>Time Preferecne</label>
+      <div class="form-check">
+        <input  class="form-check-input" type="radio" name="timePreferecne" [(ngModel)]="userModel.timePreferecne" value="morning">
+        <label class="form-check-label">morning (9AM - 12PM)</label>
+      </div>
+      <div class="form-check">
+        <input  class="form-check-input" type="radio" name="timePreferecne"  [(ngModel)]="userModel.timePreferecne" value="evening">
+        <label class="form-check-label">Evening (9AM - 12PM)</label>
+      </div>
+    </div>
+
+    <div class="form-check mb-3" >
+      <input class="form-check-input" type="checkbox" name="subscribe" [(ngModel)]="userModel.subscribe">
+      <label class="form-check-label">
+        Send me the promotional Offers
+      </label>
+    </div>
+
+      <button class="btn btn-primary" type="submit" >Submit Form</button>
+
+  </form>
+</div>
